# POLARES

./: .gitignore  Makefile.am  Makefile.in  POLARES-config.in  POLARES.in  POLARES.pc.in  POLARES_basic.in  README.md  aclocal.m4  configure  configure.ac
doc/: Makefile.am  Makefile.in
doc/refman_html/: IO__classes_8h_source.html  POLARES_8h_source.html  ReadConfigFile_8h_source.html  annotated.html  classConfigFile-members.html  classConfigFile.html  classConfigFile__coll__graph.md5  classPOLARES_1_1Cross__Sections-members.html  classPOLARES_1_1Cross__Sections.html  classPOLARES_1_1Cross__Sections__coll__graph.map  classPOLARES_1_1Cross__Sections__coll__graph.md5  classPOLARES_1_1Cuba__parameters-members.html  classPOLARES_1_1Cuba__parameters.html  classPOLARES_1_1Cuba__parameters__coll__graph.map  classPOLARES_1_1Cuba__parameters__coll__graph.md5  classPOLARES_1_1Final__State-members.html  classPOLARES_1_1Final__State.html  classPOLARES_1_1Form__factors-members.html  classPOLARES_1_1Form__factors.html  classPOLARES_1_1Gamma__Loop-members.html  classPOLARES_1_1Gamma__Loop.html  classPOLARES_1_1Gamma__Loop__coll__graph.map  classPOLARES_1_1Gamma__Loop__coll__graph.md5  classPOLARES_1_1Input-members.html  classPOLARES_1_1Input.html  classPOLARES_1_1Input__coll__graph.map  classPOLARES_1_1Input__coll__graph.md5  classPOLARES_1_1Integrands-members.html  classPOLARES_1_1Integrands.html  classPOLARES_1_1Integrands__coll__graph.map  classPOLARES_1_1Integrands__coll__graph.md5  classPOLARES_1_1Interpolation-members.html  classPOLARES_1_1Interpolation.html  classPOLARES_1_1LoopTools-members.html  classPOLARES_1_1LoopTools.html  classPOLARES_1_1Melem-members.html  classPOLARES_1_1Melem.html  classPOLARES_1_1Melem__coll__graph.map  classPOLARES_1_1Melem__coll__graph.md5  classPOLARES_1_1Melem__pol-members.html  (+52 more)
doc/refman_html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+5 more)
examples/: Makefile.am  Makefile.in  Makefile_example  POLARES.out  POLARES_basic.out  main_example.cpp  multiple_random_E_test.cpp  shiftQ2.cpp  sigma_diff_Omega_l_test.cpp
m4/: cuba.m4  gsl.m4  looptools.m4
share/: Makefile.am  Makefile.in
src/: IO_classes.h  Makefile.am  Makefile.in  POLARES.cpp  POLARES.h  ReadConfigFile.cpp  config.h  config.h.in  const.h  cross_sections.cpp  cross_sections.h  cuba_param.cpp  cuba_param.h  form_factors.cpp  form_factors.h  gamma_loop.cpp  gamma_loop.h  gsl_rand.cpp  gsl_rand.h  integrands.cpp  integrands.h  interpolation.cpp  interpolation.h  looptools_interface.cpp  looptools_interface.h  melem.cpp  melem.h  melem_pol.cpp  melem_pol.h  parameters.cpp  parameters.h  scalar_integrals.cpp  scalar_integrals.h  virtual_corrections.cpp  virtual_corrections.h
src/cuba-4.2/: config.h.in  configure  configure.ac  cuba.h  makefile.am  makefile.in
src/cuba-4.2/src/: makefile.am  makefile.in
src/cuba-4.2/src/common/: CSample.c  Data.c  Fork.c  Global.c  Random.c  makefile.am  makefile.in
src/cuba-4.2/src/cuhre/: makefile.am  makefile.in
src/cuba-4.2/src/divonne/: makefile.am  makefile.in
src/cuba-4.2/src/suave/: makefile.am  makefile.in
src/cuba-4.2/src/vegas/: Integrate.c  decl.h  makefile.am  makefile.in
